--- a/index.html
+++ b/index.html
@@ -235,12 +235,23 @@
                     Lower number of cuts doesn’t not necessarily put Efficiency Gap into the +/- 8% range! 
                 </li>
             </ol>
+            <p>
+                Hopefully, at this point, you are familiarized with the idea of “distribution” of metrics. Often times, political groups come to research scientists asking for fairness evaluation of a certain districting plan. This is not meaningful! We propose that an alternative viable evaluation method would be to compare any particular redistricting plan to the global distributions of all possible plans and the distributions of their corresponding metrics. 
+            </p>
         </div>
 
         <!-- Part 2: Given 3 plan maps and let user click one to show plan's 6 metrics on corresponding global distribution -->
         <div id = "frame4">
+            <p>
+                Below are three districting plans that were generated using simulated data. Can you tell if gerrymandering has taken place?
+            </p>
             <div id = "left4">
-                SOME TEXT
+                <p>
+                    Click on a given map to see their corresponding metrics compared to the global distributions of these metrics. How much of a outlier are they?
+                </p>
+                <p>
+                    You should be able to see that map 1 and 3’s metrics fall very close to the median/mode of the distributions, whereas map 2’s metrics seem like outliers from the distributions. This indicates a high likelihood that gerrymandering has taken place in map 2.
+                </p>
             </div>
             
             <div id = "right4">
@@ -292,8 +303,13 @@
         
 
         <div id = "frame5">
+            <p>
+                Lastly, we want you to understand that states differ drastically in terms of these metrics. Look a look below to see how different the state of Pennsylvania is from Virginia!
+            </p>
             <div id = "left5">
-                <p>SOME TEXT</p>
+                <p>
+                    This is why you should not compare metrics across states - because of differences in inherent geopolitical characteristics for each state.
+                </p>
             </div>
 
             <div id = "right5">
