--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <select id="description" onchange="disp_text()">
                     <option value="0">Metrics definition: </option>
                     <option value="1">Number of Cuts</option>
-                    <option value="2">% of Democratic Votes in the Most Democratic District:</option>
+                    <option value="2">% of Democratic Votes in the Most Democratic District</option>
                     <option value="3">Mean Median</option>
                     <option value="4">Number of seats won by Democrats</option>
                     <option value="5">Efficiency gap</option>
@@ -310,21 +310,33 @@
                 <p>
                     This is why you should not compare metrics across states - because of differences in inherent geopolitical characteristics for each state.
                 </p>
+                <p>
+                    We hope that by now, you feel more educated on:
+                </p>
+                <ol>
+                    <li>
+                        Why some common beliefs are not necessarily true 
+                    </li>
+                    <li>
+                        Why you should not look at any particular plan or metric but look at distributions of metrics across possible plans
+                    </li>
+                    <li>
+                        Why you should not compare metric statistics across different states
+                    </li>
+                </ol>
             </div>
 
             <div id = "right5">
-                <!-- Part 3: Compare different metrics between VA vs. PA -->
                 <img src="images/compare/mms.png"/>
                 <select id="picDD">
                     <option value="0" selected>Mean-Median</option>
                     <option value="1">Efficiency Gap</option>
                     <option value="2">Number of Seats won by Democratic</option>
                     <option value="3">Number of Cuts</option>
+                    <option value="4">% of Democratic Votes in the Most Democratic District</option>
                 </select>
             </div>
         </div>
-        
-
         
         <footer>
             <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
