--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 In Collaboration with the Metric Geometry and Gerrymandering Group (MGGG) @ MIT CSAIL
             </p>
         </div>
+
         <div class = "frame1">
             <div class = "explain">
                 <p> 
@@ -74,7 +75,7 @@
                 </ol>
             </div>
 
-            <figure><img src="images/Background1.png" id="bgrd" alt="Sketch_sim"/></figure>
+            <figure><img src="images/Background1.png" class="bgrd" alt="Sketch_sim"/></figure>
 
             <p>Please, see our write-up <a href="http://github.mit.edu/pages/6894-sp19/Visualizing_Gerrymandering/writeup.html">here</a>.</p>
         </div>
