--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </ol>
             </div>
 
-            <figure><img src="images/Background1.png" class="bgrd"/></figure>
+            <!-- <figure><img src="images/Background1.png" class="bgrd"/></figure> -->
 
             <p>Please, see our write-up <a href="http://github.mit.edu/pages/6894-sp19/Visualizing_Gerrymandering/writeup.html">here</a>.</p>
         </div>
