--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </head>
 
     <body>
-         <header class = "title">6.894 Interactive Data Visualization Final Project</header>
+         <header class = "title"><b>6.894 Interactive Data Visualization Final Project</b></header>
         <div class = "sub-title">
             <p>
                 Team Members: Chuyan Millie Huang, Wenwei Vicky Liu, Kim-Anh Nhi
