--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 
     <body>
          <header class = "title"><b>6.894 Interactive Data Visualization Final Project</b></header>
+        <div class = "vis-title"><font size="3" color="red">
+            Visualizing Gerrymandering
+        </div>
         <div class = "sub-title">
             <p>
                 Team Members: Chuyan Millie Huang, Wenwei Vicky Liu, Kim-Anh Nhi
-            </p>
-            <p>
+                <br>
                 In Collaboration with the Metric Geometry and Gerrymandering Group (MGGG) @ MIT CSAIL
             </p>
         </div>
