--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     <body>
          <header class = "title"><b>6.894 Interactive Data Visualization Final Project</b></header>
-        <div class = "vis-title"><font size="3" color="red">
-            Visualizing Gerrymandering
+        <div class = "vis-title"><font size="10">
+            <b>Visualizing Gerrymandering</b>
         </div>
         <div class = "sub-title">
             <p>
