--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 
     <body>
          <header class = "title"><b>6.894 Interactive Data Visualization Final Project</b></header>
-        <div class = "vis-title"><font size="10">
-            <b>Visualizing Gerrymandering</b>
+        <div class = "vis-title">
+            <font size = 10>
+                <b>Visualizing Gerrymandering</b>
+            </font>
         </div>
         <div class = "sub-title">
             <p>
