--- a/index.html
+++ b/index.html
@@ -335,6 +335,20 @@
             </div>
 
             <div id = "right5">
+                <script type="text/javascript">
+                    var imageList = [
+                                "images/compare/mms.png",
+                                "images/compare/egs.png",
+                                "images/compare/hmss.png",
+                                "images/compare/nb_cuts.png",
+                                "images/compare/vote_share.png"];
+
+                    $('#picDD').change(function() {
+                        var val = parseInt($('#picDD').val());
+                        $('div').attr("graph",imageList[val]);
+                        $('img').attr("src",imageList[val]);
+                    });
+                </script>
                 <img src="images/compare/mms.png"/>
                 <select id="picDD">
                     <option value="0" selected>Mean-Median</option>
