--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
                 <img src="images/compare/mms.png"/>
 
-                <select id="picDD" onchange="setPicture();">
+                <select id="picDD">
                     <option value="0" selected>Mean-Median</option>
                     <option value="1">Efficiency Gap</option>
                     <option value="2">Number of Seats won by Democratic</option>
