--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div id = "frame3">
             <div id="textToShow">
                 <p>
-                    Now, using the same tool above, let’s take a look at some common beliefs:
+                    Now, using the same tool on the right, let’s take a look at some common beliefs:
                 </p>
                  <ol>
                     <li>
@@ -231,11 +231,11 @@
                     After you have spent some time playing around with the tool on the right, check the section below.
                 </p>
             </div>
-            <p id="didUSee"><b>Did you see? Using Virginia as an example:</b></p>
+            <p id="didUSee"><b>Did you see? </b></p>
             <button type="button" id="reveal" onclick="showText()">Press the button to read some insights</button>
             <div id="textToHide" style="visibility:hidden">
-                <p>
-                
+            <p>
+                Using Virginia as an example:
             </p>
             <ol>
                 <li>
@@ -349,6 +349,10 @@
                 <p>
                     This is why you should not compare metrics across states - because of differences in inherent geopolitical characteristics for each state.
                 </p>
+                <br>
+                <br>
+                <br>
+                <br>
                 <p>
                     We hope that by now, you feel more educated on:
                 </p>
@@ -363,10 +367,6 @@
                         Why you should not compare metric statistics across different states
                     </li>
                 </ol>
-            </div>
-
-            <div id = "right5">
-                <img class="bottomImg" src="images/compare/mms.png" alt="distribution comparison">
                 <select id="picDD">
                     <option value="0" selected>Mean-Median</option>
                     <option value="1">Efficiency Gap</option>
@@ -374,6 +374,10 @@
                     <option value="3">Number of Cuts</option>
                     <option value="4">% of Democratic Votes in the Most Democratic District</option>
                 </select>
+            </div>
+
+            <div id = "right5">
+                <img class="bottomImg" src="images/compare/mms.png" alt="distribution comparison">
                 <script type="text/javascript">
                     var imageList = [
                                 "images/compare/mms.png",
