update_to_parent

--- a/results.html
+++ b/results.html
@@ -18,7 +18,7 @@
 
 <body>
             
-<h4 class="wu"><font size = 5>Exploratory Data Analysis Result</font></h4><br>
+<h4 class="wu"><font size = 5>Supplemental - Exploratory Data Analysis</font></h4><br>
     <p>See below for some earlier iterations of static visualizations done in Python matplotlib for exploration and data analysis purpose, with some insights we’ve learned from studying them:</p>
 
     <figure><img src="images/distribution_egs.png" class="sk" alt="Sketch1"/><figcaption>Efficiency Gap</figcaption></figure>
@@ -53,22 +53,6 @@
     <figure><img src="images/added.png" class="sk" alt="Sketch12"/></figure>
     <p>On average, Virginia is a “naturally” democratic state. The histogram shows the distribution of the ratio (#Dem seats / #Rep seats) across plans. It confirms that that ratio is more than 1 in most cases.</p>
     <br>
-
-    <h5 class="wu">Sources:</h5>
-    <ul>
-        <li>Data</li>
-        <ul>
-            <li><a href="https://github.com/drdeford/VA_Viz">Data on Gerrymandering</a></li>
-            <li><a href="https://github.com/mggg/GerryChain">GerryChain</a></li>
-        </ul>
-        <li>Libraries</li>
-        <ul>
-            <li>D3.js</li>
-            <li>jQuery UI</li>
-            <li>D3-tip.js</li>
-            <li>d3.v3.min.js</li>
-        </ul>
-    </ul>
 
   
 </body>
